--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,147 @@
+.admin-panel {
+    height: 0;
+    z-index: 30;
+    opacity: 0;
+    transition: 0.3s;
+    position: absolute;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 5px;
+}
+
+.admin-panel__btn {
+    color: white;
+    transition: 0.2s;
+    padding: 10px;
+    background-color: #1c70fd;
+    border-radius: 5px;
+}
+
+.admin-panel__btn:hover {
+    background-color: #4f90fd;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: 300;
+    align-items: center;
+    padding-top: 100px;
+    background-color: rgba(49, 49, 49, 0.8);
+}
+
+.modal__body {
+    position: relative;
+    z-index: 500;
+    display: none;
+    flex-direction: column;
+    gap: 10px;
+    max-height: 650px;
+    max-width: 500px;
+    overflow-y: scroll;
+    text-align: center;
+    width: -moz-fit-content;
+    width: fit-content;
+    min-width: 300px;
+    padding: 30px;
+    box-shadow: 0px 5px 10px 5px rgba(0, 0, 0, 0.3) inset;
+    background-color: #efeae5;
+    border-radius: 15px;
+    min-height: 300px;
+    margin: auto;
+}
+
+.modal__body.active {
+    display: flex;
+}
+
+.modal__body::-webkit-scrollbar {
+    width: 0;
+}
+
+.modal__input_img {
+    display: none;
+}
+
+.modal__subtitle {
+    margin-bottom: 5px;
+    margin-top: 10px;
+}
+
+.modal__label {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.modal__img {
+    width: 200px;
+    min-height: 150px;
+    -o-object-fit: cover;
+    object-fit: cover;
+    border-radius: 5px;
+}
+
+.modal__input {
+    outline: none;
+    border: none;
+    background-color: white;
+    width: 100%;
+    padding: 10px;
+    transition: 0.2s;
+    box-shadow: 0px 5px 10px 1px rgba(0, 0, 0, 0.2) inset;
+    border-radius: 5px;
+}
+
+.modal__input_textarea {
+    resize: none;
+    height: 125px;
+}
+
+.modal__input:hover, .modal__input:focus {
+    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0) inset;
+}
+
+.modal__img-name {
+    word-break: break-all;
+    width: 100%;
+    transition: 0.2s;
+    cursor: pointer;
+    border-radius: 5px;
+    box-shadow: 0px 5px 10px 1px rgba(0, 0, 0, 0.2) inset;
+    padding: 10px;
+    display: block;
+    text-align: left;
+    background-color: white;
+}
+
+.modal__img-name:hover {
+    color: #1c70fd;
+    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0) inset;
+}
+
+.modal__btn {
+    background-color: #1c70fd;
+    transition: 0.3s;
+    font-weight: bold;
+    width: 100%;
+    padding: 10px;
+    color: white;
+    font-size: 16px;
+    border-radius: 5px;
+}
+
+.modal__btn:hover {
+    background-color: #4f90fd;
+}
+
 .preloader {
     background-color: white;
     width: 100%;
